@@ -1,3 +1,7 @@
+2020-04-23 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_menu_item.c Replace switch case with if/else.
+
 2020-04-22 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/dialogs/geda_image_chooser.c: Remove conditional directives
